[package]
name = "genbench"
version = "0.1.0"
edition = "2021"

[dependencies]
smallbitvec = "2.4"
criterion = "0.3"
oorandom = "*"

beach_map = "*"
compactmap = "*"
id-vec = "*"
indextree = "*"
thunderdome = "*"
generational-arena = "*"
generational-indextree = "*"
pulz-arena = "0.4.0"
slab = "*"
slotmap = "*"
stable-vec = "*"
stash = "*"

[[bench]]
name = "basic" 
harness = false
